--- a/readme
+++ b/readme
@@ -1,7 +1,4 @@
-# Task 1
-Dodaj na końcu tego pliku przykladowa funkcje zawierającą Twoje imie i nazwisko:
-
-void jan_kowalski(void)
-{
-	Jan Kowalski
+void Krystian_Naskręski(void) 
+{ 
+	Krystian Naskręski 
 }
