--- a/readme
+++ b/readme
@@ -1,3 +1,11 @@
+# Task 1
+Dodaj na końcu tego pliku przykladowa funkcje zawierającą Twoje imie i nazwisko:
+
+void jan_kowalski(void)
+{
+	Jan Kowalski
+}
+
 void Krystian_Naskręski(void) 
 { 
 	Krystian Naskręski 
